--- a/stocker/src/main/resources/application.yml
+++ b/stocker/src/main/resources/application.yml
@@ -7,12 +7,18 @@ spring:
   application:
     name: stocker
 
+  kafka:
+    producer:
+      bootstrap-servers: localhost:9092,localhost:9093,localhost:9094
+      key-serializer: org.apache.kafka.common.serializer.IntegerSerializer
+      value-serializer: org.apache.kafka.common.serializer.StringSerializer
+
 alphavantage-intraday:
   url: https://www.alphavantage.co
   uri: /query
   function: function=TIME_SERIES_INTRADAY
   symbol: symbol=
-  apiKey: apikey=demo
+  apiKey: apikey=6BTX1GJFPPY37E4K
   interval: interval=5min
 
 alphavantage-static:
