--- a/stocker/pom.xml
+++ b/stocker/pom.xml
@@ -32,4 +32,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
+
+    <plugins>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+            <version>2.4.0</version>
+        </plugin>
+    </plugins>
 </project>
